# rust-snake

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
src/: snake.rs
