[package]

name = "snake"
version = "0.0.0"
authors = [
    "Arcterus <arcterus@mail.com>",
    "indiv0 <contact@nikitapek.in>"]

[[bin]]

name = "snake"
path = "./src/snake.rs"

[dependencies.piston]

git = "https://github.com/PistonDevelopers/piston"

[dependencies.graphics]

git = "https://github.com/PistonDevelopers/rust-graphics"

[dependencies.sdl2_game_window]

git = "https://github.com/PistonDevelopers/sdl2_game_window"

[dependencies.opengl_graphics]

git = "https://github.com/PistonDevelopers/opengl_graphics"

